--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Finance Console</title>
 </head>
 <body>
-  <h1 style="text-align:center;">Open the Console to See the Magic ✨! </h1>
-  <p id="demo"></p>
+  <h1 style="text-align:center;">Open the Console to See the Magic happen 💕💕! </h1>
+ 
   <script src="index.js"></script>
 </body>
 </html>
