--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <title>Finance Console</title>
 </head>
 <body>
-  <h1 style="text-align:center;">Open the Console to See the Magic happen 💕💕! </h1>
+  <style>body {
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(80deg,rgb(95, 240, 95),rgb(63, 223, 241));
+  }</style>
+  <h1 style="text-align:center;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Open the Console to See the Magic happen 💕💕! </h1>
  
   <script src="index.js"></script>
 </body>
